Add treatments text to treatment page, make it as flex and set it as column so text is under eachother

--- a/treatments.html
+++ b/treatments.html
@@ -47,29 +47,31 @@
             <!--Button-->
             <a href="https://www.bokadirekt.se/places/skonhetsakuten-36360" target="_blank" class="button1">Book your
                 treatments today</a>
-            <br>
+        </div>
+        <br>
+        <!--Treatment Images-->
+        <div class="treatments-section">
             <div>
 
+                <h1>Teeth Whitening</h1>
+                <p>Teeth whitening involves bleaching your teeth to make them lighter. It can't make your teeth
+                    brilliant white, but it can lighten the existing colour by several shades.
+                    Price: 1000 kr
+                </p>
             </div>
-            <p>Mix-lashes 700 kr</p>
-            <br>
-            <p>Volume lashes 655 kr</p>
-            <br>
-            <p>Brown Volume/Mix Lashes 799 kr</p>
-            <br>
-            <p>Eyebrow plucking 150 kr</p>
-            <br>
-            <p>Hair removal - 5 areas 7000 kr</p>
-            <br>
-            <p>Hair removal - Brazillian/Hollywood 4000 kr</p>
-            <br>
-            <p>Hair removal Full body 2999 kr</p>
-            <br>
-            <p>Teethwhitening 1195 kr</p>
-            <br>
-            <p>Microblading 3000 kr</p>
-            <br>
+            <div>
+
+                <h1>Lashes</h1>
+                <p>Teeth whitening involves bleaching your teeth to make them lighter. It can't make your teeth
+                    brilliant white, but it can lighten the existing colour by several shades.
+                    Price: 1000 kr
+                </p>
+            </div>
+
+
         </div>
+
+
 
     </section>
     <script src="https://kit.fontawesome.com/6f464bbc42.js" crossorigin="anonymous"></script>
