Add the remaining treatments and give them a width of 50% and align the text to center

--- a/treatments.html
+++ b/treatments.html
@@ -56,15 +56,44 @@
                 <h1>Teeth Whitening</h1>
                 <p>Teeth whitening involves bleaching your teeth to make them lighter. It can't make your teeth
                     brilliant white, but it can lighten the existing colour by several shades.
-                    Price: 1000 kr
                 </p>
             </div>
             <div>
 
                 <h1>Lashes</h1>
-                <p>Teeth whitening involves bleaching your teeth to make them lighter. It can't make your teeth
-                    brilliant white, but it can lighten the existing colour by several shades.
-                    Price: 1000 kr
+                <p>Eyelash extensions are individual lashes that are applied to the lash line, and they can last for up
+                    to six weeks! There are three types of lash to choose from; synthetic, silk and mink. There are also
+                    a range of sizes to choose from, just like with false lashes. In order for them to last as long as
+                    possible, it’s important to take proper care of them.
+                </p>
+            </div>
+            <div>
+
+                <h1>Hair removal Full body</h1>
+                <p>Laser hair removal works by releasing a wavelength of light into the hair follicle, which converts to
+                    heat, damaging or destroying the bulb, by a process called photothermolysis. Provided the hair is
+                    targeted at the right stage of growth (the anagen phase), this process slows or stops down the
+                    regrowth of hair in the treated area.
+                </p>
+            </div>
+            <div>
+
+                <h1>Microneedling </h1>
+                <p>Microneedling (also known as skin needling or collagen induction therapy) is a type of treatment that
+                    uses small needles to cause tiny punctures in the skin. These small contact points encourage the
+                    body to create a wound healing response and renew the skin cells. As your skin repairs, the
+                    production of collagen and elastin is triggered to give an almost immediate plumping effect. It can
+                    also help tackle other skin damage such as scarring, dark marks, sun damage and ageing.
+                </p>
+            </div>
+            <div>
+
+                <h1>Microblading </h1>
+                <p>Microblading is a semi-permanent tattooing technique used for the eyebrows. Microblading can be used
+                    on someone with little to no eyebrows by creating an illusion of a more defined and fuller brow.
+                    Many of us spend a lot of time and money plucking, waxing, threading, and filling in our eyebrows.
+                    Which is why many consider something more permanent like microblading. Eyebrow trends do change
+                    which is why I love the semi-permanent appeal of microblading.
                 </p>
             </div>
 
