Set margin for the treatment-section to auto so it is centered and add margin bottom to text so it is spaced out

--- a/treatments.html
+++ b/treatments.html
@@ -53,7 +53,7 @@
         <div class="treatments-section">
             <div>
 
-                <h1>Teeth Whitening</h1>
+                <h1>Teeth-Whitening</h1>
                 <p>Teeth whitening involves bleaching your teeth to make them lighter. It can't make your teeth
                     brilliant white, but it can lighten the existing colour by several shades.
                 </p>
@@ -69,7 +69,7 @@
             </div>
             <div>
 
-                <h1>Hair removal Full body</h1>
+                <h1>Hair-Removal Full body</h1>
                 <p>Laser hair removal works by releasing a wavelength of light into the hair follicle, which converts to
                     heat, damaging or destroying the bulb, by a process called photothermolysis. Provided the hair is
                     targeted at the right stage of growth (the anagen phase), this process slows or stops down the
