Error fix in Iframe html. Delete the iframe border 0 to correct the error code

--- a/about.html
+++ b/about.html
@@ -51,9 +51,10 @@
                 the treatment and afterward as well.
                 Come by to socialize or discuss potential treatments in our cozy salon. See you soon!</p>
 
-            <p id="info">&#9432; Those of you who visit us can feel safe knowing that we are taking recommended measures regarding the
+            <p id="info">&#9432; Those of you who visit us can feel safe knowing that we are taking recommended measures
+                regarding the
                 coronavirus
-                COVID-19.Our skilled beauty practitioners have over 5 years of experience and hold qualifications in
+                COVID-19. Our skilled beauty practitioners have over 5 years of experience and hold qualifications in
                 various specialized areas,
                 including lashes, laser treatments, microblading, and more. Rest assured that you're in the capable
                 hands of experts
@@ -62,7 +63,10 @@
 
             <!--Utube Video-->
             <div class="container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/Cwy7LBGqOWU?si=-IZLaPlCEOHnM3Kd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/Cwy7LBGqOWU?si=-IZLaPlCEOHnM3Kd" title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
             </div>
 
         </div>
