Change the about, treatments, contact section to h1 and change the treatments in treatments section to h2

--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
             <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
         <div class="text-box">
-            <h2>ABOUT US</h2>
+            <h1>ABOUT US</h1>
             <p>Welcome to Skönhetsakuten in Västerås. Here, you can choose various treatments according to your
                 preferences.
                 These are performed by authorized and professional practitioners who care about you as a customer during
@@ -63,8 +63,8 @@
 
             <!--Utube Video-->
             <div class="container">
-                <iframe src="https://www.youtube.com/embed/Cwy7LBGqOWU?si=-IZLaPlCEOHnM3Kd" title="YouTube video player"
-                    frameborder="0"
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Cwy7LBGqOWU?si=-IZLaPlCEOHnM3Kd"
+                    title="YouTube video player"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
             </div>
