--- a/treatments.html
+++ b/treatments.html
@@ -42,8 +42,9 @@
             <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
         <!--Treatments-->
+        <h1 id="treatments">TREATMENTS</h1>
         <div class="treatments">
-            <h1>TREATMENTS</h1> <br>
+             <br>
             <!--Button-->
             <a href="https://www.bokadirekt.se/places/skonhetsakuten-36360" target="_blank" class="button1">Book your
                 treatments today</a>
